fix(client): add horizontal scrolling for tables

--- a/client/src/app/[locale]/(notes)/notes/components/Editor/styles/table.scss
+++ b/client/src/app/[locale]/(notes)/notes/components/Editor/styles/table.scss
@@ -1,6 +1,10 @@
 $borderRadius: 4px;
 $borderColor: rgb(170 170 170);
 
+.tableWrapper {
+  overflow-x: scroll;
+}
+
 .tableWrapper table {
   border: 1px solid $borderColor;
   border-collapse: separate;
